// Vitest Snapshot v1

exports[`Settings component > should display 1`] = `
<DocumentFragment>
  <div
    class="_styles_23b490"
  >
    <section>
      <h4>
        Notification de message
      </h4>
      <form>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
            for="sound-control"
          >
            <input
              checked=""
              class="form-check-input"
              id="sound-control"
              type="checkbox"
            />
            Son
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
            for="notif-control"
          >
            <input
              checked=""
              class="form-check-input"
              id="notif-control"
              type="checkbox"
            />
            Notification sur le bureau
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
            for="persistence-control"
          >
            <input
              checked=""
              class="form-check-input"
              id="persistence-control"
              type="checkbox"
            />
            Persist configuration
          </label>
        </div>
      </form>
    </section>
    <section>
      <h4
        class="mb-3"
      >
        This room
      </h4>
    </section>
    <section>
      <h4>
        Propritété du salon
      </h4>
      <p>
        La personne qui a créé le salon est le propriétaire du salon et dispose de privilèges spéciaux, comme la possibilité de verrouiller et de déverrouiller le salon. Si le propriétaire quitte le salon, la deuxième personne qui le rejoint en devient propriétaire. Si elle part, la troisième personne devient propriétaire, et ainsi de suite. Le propriétaire de la salle a une icône en forme d'étoile à côté de son nom d'utilisateur dans le menu déroulant des participants.      </p>
    </section>
    <section>
      <h4>
        Lock Room
      </h4>
      <p>
        Si vous êtes le propriétaire du salon, vous pouvez verrouiller et déverrouiller le salon en cliquant sur l'icône de verrouillage dans la barre de navigation. Lorsqu'un salon est verrouillée, aucun autre participant ne peut la rejoindre.
      </p>
    </section>
    <section>
      <h4>
        Slash Commands
      </h4>
      <p>
        The following slash commands are available:
      </p>
      <ul>
        <li>
          /nick [username] 
          <span
            class="text-muted"
          >
            changes username
          </span>
        </li>
        <li>
          /me [action] 
          <span
            class="text-muted"
          >
            performs an action
          </span>
        </li>
        <li>
          /clear 
          <span
            class="text-muted"
          >
            clears your message history
          </span>
        </li>
        <li>
          /help 
          <span
            class="text-muted"
          >
            lists all commands
          </span>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Settings component > should display 2`] = `
<DocumentFragment>
  <div
    class="_styles_23b490"
  >
    <section>
      <h4>
        New message notification
      </h4>
      <form>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
            for="sound-control"
          >
            <input
              checked=""
              class="form-check-input"
              id="sound-control"
              type="checkbox"
            />
            Sound
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
            for="notif-control"
          >
            Desktop notifications have been denied
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
            for="persistence-control"
          >
            <input
              checked=""
              class="form-check-input"
              id="persistence-control"
              type="checkbox"
            />
            Persist configuration
          </label>
        </div>
      </form>
    </section>
    <section>
      <h4
        class="mb-3"
      >
        This room
      </h4>
    </section>
    <section>
      <h4>
        Room Ownership
      </h4>
      <p>
        The person who created the room is the room owner and has special privileges, like the ability to lock and unlock the room. If the owner leaves the room, the second person to join assumes ownership. If they leave, the third person becomes owner, and so on. The room owner has a star icon next to their username in the participants dropdown.
      </p>
    </section>
    <section>
      <h4>
        Lock Room
      </h4>
      <p>
        If you are the room owner, you can lock and unlock the room by clicking the lock icon in the nav bar. When a room is locked, no other participants will be able to join.
      </p>
    </section>
    <section>
      <h4>
        Slash Commands
      </h4>
      <p>
        The following slash commands are available:
      </p>
      <ul>
        <li>
          /nick [username] 
          <span
            class="text-muted"
          >
            changes username
          </span>
        </li>
        <li>
          /me [action] 
          <span
            class="text-muted"
          >
            performs an action
          </span>
        </li>
        <li>
          /clear 
          <span
            class="text-muted"
          >
            clears your message history
          </span>
        </li>
        <li>
          /help 
          <span
            class="text-muted"
          >
            lists all commands
          </span>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;
